<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_dialog_bg"
    android:orientation="vertical">

    <include layout="@layout/dialog_title_line" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/write_message"
        android:minHeight="100dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="@drawable/text_gray_blue" />


    <View style="@style/lib_style_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/Button_DialogConfirmNew"
            android:background="@drawable/btn_dialog_left"
            android:text="@string/cancel"
            android:textColor="@drawable/text_gray_blue" />

        <ImageView
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <Button
            android:id="@+id/confirm"
            style="@style/Button_DialogConfirmNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_dialog_right"
            android:text="@string/publish"
            android:textColor="@drawable/text_blue_gray" />
    </LinearLayout>

</LinearLayout>