<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_title_bar_translate" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <AutoCompleteTextView
            android:id="@+id/user_name"
            style="@style/lib_style_button4_large"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="8dp"
            android:hint="@string/login_hit_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            style="@style/lib_style_button4_large"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="8dp"
            android:hint="@string/hint_pwd"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_button"
            style="@style/lib_style_button5_large"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/action_sign_in" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:text="@string/forgot_pwd"
            android:textColor="#5ca5f4"
            android:textSize="13sp" />

    </LinearLayout>
</LinearLayout>
