<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/lib_color_bg14"
    android:padding="8dp">

    <TextView
        android:id="@+id/change_qq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/lib_color_font8"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/change_qq"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/change_wx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/lib_color_font8"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/change_wx"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/leave_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/leave_message"
        android:textColor="@color/red"
        android:textSize="16sp" />
</LinearLayout>