<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_title_bar_translate" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <AutoCompleteTextView
            android:id="@+id/tv_phone"
            style="@style/lib_style_button4_large"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="8dp"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sms_code"
                style="@style/lib_style_button4_large"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="8dp"
                android:hint="@string/enter_code"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/password_code"
                style="@style/lib_style_button4_large"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:background="@color/lib_color_bg13"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/get_code"
                android:textColor="@color/lib_color_font8" />
        </LinearLayout>


        <TextView
            android:id="@+id/next_btn"
            style="@style/lib_style_button5_large"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/next" />

    </LinearLayout>
</LinearLayout>
